임시 커밋 확인 코드 까지 구현된 버전

--- a/registration/templates/registration/status.html
+++ b/registration/templates/registration/status.html
@@ -9,6 +9,7 @@
             <div>{% trans "Registration is completed" %}</div>
             <div>
                 <p>{% trans "Your registration is completed without any problems" %}</p>
+                <p>접수 확인 코드 : {{ registration.confirmation_code }}</p>
             </div>
             <table class="table table-striped table-bordered">
                 <tr>
